--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
   <div class="banner"></div>
 </header>
 
-<!-- search bar -->
+<!-- search bar start-->
 <div class="container search-bar">
   <div class="search-bar-outer">
     <div class="search-bar-inner">
@@ -19,8 +19,9 @@
     </div>
   </div>
 </div>
+{{!-- search bar end --}}
 
-<!-- restaurant list -->
+<!-- restaurant list start-->
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-10 col-12 mx-auto">
@@ -51,3 +52,4 @@
     </div>
   </div>
 </div>
+{{!-- restaurant list start end --}}
